# hyperiax

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTION.md  Lind_rate_likelihood_v2.ipynb  Makefile  README.md  Rate_Likelihood_Example1.ipynb  Rate_Likelihood_Example_2_R.ipynb  Tree building.ipynb  environment.yml  localUpdate_MCMC.py  makefile  pyproject.toml  rate_likelihood_estimation.ipynb  requirements.txt  setup.py  upwards_lddmm.ipynb
.github/workflows/: build_doc.yaml  build_docs.yaml  docs.yaml  pypi_push.yaml  pytest.yaml
R/: fit_data-ML.R  sim_data.R
R/data-R/: character.txt  tree.tre
benchmarks/: batch_generation.py  inner_nodes_est_R.ipynb  phylmean.py  phylogenetic_mean.ipynb
docs/: Makefile  conf.py  hyperiax.models.rst  hyperiax.rst  hyperiax.tree.rst  make.bat  requirements.txt
docs/source/: api.rst  conf.py  hyperiax.execution.rst  hyperiax.mcmc.rst  hyperiax.models.functional.rst  hyperiax.models.prebuilts.rst  hyperiax.rst  hyperiax.tree.rst  index.rst  modules.rst  usage.rst
docs/source/api/: index.rst
docs/source/notebooks/: 01_quickstart.ipynb  02_writing_sweeps.ipynb  03_phylo_mean.ipynb  04_phylo_bayesian.ipynb  05_gaussian_bffg.ipynb  05_gaussian_mcmc.ipynb  06_gaussian_mle.ipynb  06_gaussian_nuts.ipynb  07_kunita_shape.ipynb  07_sde_bffg.ipynb  07_sde_mcmc.ipynb  DICAROS.ipynb  Upwards_LDDMM.ipynb  index.rst  mcmc_Gaussian_BFFG.ipynb  mcmc_Gaussian_BFFG_shapes.ipynb  mcmc_gaussian_bffg.ipynb  mean_estimation.ipynb  tree_building.ipynb
examples/: ABFFG.py  DICAROS.ipynb  Diff-IC.ipynb  SDE.py  Tree building.ipynb  Upwards_LDDMM.ipynb  execution.ipynb  fast.ipynb  hmm.ipynb  local.ipynb  localUpdate_MCMC.py  localfast.ipynb  mcmc.ipynb  mcmc_Gaussian_BFFG.ipynb  mcmc_Gaussian_BFFG_shapes.ipynb  mcmc_Gaussian_BFFG_shapes_SDEs.ipynb  mcmc_Gaussian_BFFG_shapes_SDEs_Kunita.ipynb  mcmc_Gaussian_BFFG_shapes_state-dependent_covariance.ipynb  mcmc_Gaussian_BFFG_shapes_state-dependent_covariance_3D.ipynb  mcmc_full_tree_Gaussian.ipynb  mcmc_kunita_eulerian.ipynb  mcmc_kunita_lagrangian.ipynb  mean_estimation.ipynb  phylogenetic_independent_constrasts.ipynb  playground.ipynb  shape.py  treeMCMC.py  upwards_lddmm.ipynb
examples/example_data/butterfly/: landmarks.csv  tree.txt
hyperiax/: __init__.py  _version.py
hyperiax/core/: __init__.py  builders.py  dispatch.py  errors.py  schema.py  sweep.py  topology.py  tree.py  views.py
hyperiax/execution/: __init__.py  collate.py  dependencyexecutor.py  executor.py  fastexecutor.py  levelexecutor.py  redblackexecutor.py  unorderedexecutor.py
hyperiax/io/: __init__.py  newick.py
hyperiax/mcmc/: __init__.py  fixedparameter.py  flatParameter.py  metropolis_hastings.py  parameter.py  parameters.py  parameterstore.py  plotting.py  samplers.py  statistics.py  utils.py  varianceParameter.py
hyperiax/mcmc/tests/: conftest.py  test_samplers.py
hyperiax/models/: __init__.py  basemodel.py  basemodels.py  lambdamodels.py  updatemodel.py  updownmodel.py  utils.py
hyperiax/models/functional/: __init__.py  reducers.py  shortup.py
hyperiax/models/prebuilts/: __init__.py  lddmm_landmark_alignment.py  mean_estimation.py
hyperiax/plotting/: __init__.py  ascii.py  scatter.py  shape.py  tree_plots.py
hyperiax/prebuilt/: __init__.py  _gaussian_density.py  bffg.py  bffg_gaussian.py  bffg_sde.py  lddmm.py  mcmc.py  phylo_mean.py  sde.py  shape_kernels.py
hyperiax/tree/: __init__.py  builders.py  childrenlist.py  fasttree.py  initializers.py  plot_utils.py  printer_utils.py  topology.py  tree.py  updaters.py  utils.py
hyperiax/utils/: __init__.py  ode.py  sde.py
jaxtrees/execution/: __init__.py  dependencyexecutor.py  executor.py  redblackexecutor.py  unorderedexecutor.py
jaxtrees/mcmc/: __init__.py  varianceParameter.py
jaxtrees/models/: basemodel.py  lambdamodels.py  updatemodel.py  updownmodel.py
jaxtrees/models/functional/: __init__.py
jaxtrees/models/prebuilts/: mean_estimation.py
jaxtrees/tree/: __init__.py  builders.py  initializers.py  jaxtree.py  updaters.py
requirements/: base.txt  dev.txt  io.txt  notebook.txt  prebuilt.txt
tests/: builders_test.py  childlist_test.py  executors_test.py  plotting_test.py  test_builders.py  test_core_dependencies.py  test_fixtures.py  test_io_newick.py  test_newick.py  test_prebuilt_bffg_gaussian.py  test_prebuilt_bffg_precision.py  test_prebuilt_bffg_sde.py  test_prebuilt_lddmm.py  test_prebuilt_mcmc.py  test_prebuilt_phylo_mean.py  test_prebuilt_sde.py  test_prebuilt_shape_kernels.py  test_public_surface.py  test_regression.py  test_schema.py  test_sweep_down.py  test_sweep_up.py  test_sweep_up_unequal.py  test_topology.py  test_tree.py  test_tree_printer.py  test_utils_ode.py  test_utils_sde.py  tree_test.py
