[project]
name = "hyperiax"
authors = [
  { name = "Stefan Sommer", email = "sommer@di.ku.dk" },
  { name = "Marcus Holte Teller", email = "marcus@di.ku.dk" },
  { name = "Gefan Yang", email = "***@di.ku.dk" },
  { name = "Michael Baand Severinsen", email = "***@di.ku.dk" },
  { name = "Morten Akhøj Pedersen", email = "***@di.ku.dk" },
  { name = "Nicklas Boserup", email = "***@di.ku.dk" },
]
description = "Tree traversals using JAX"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=1.26",
]
dynamic = ["version"]

[project.optional-dependencies]
# Newick I/O via ete3.
io = [
    "ete3>=3.1",
]
# BFFG prebuilt models — diffrax powers the ODE-integrated backward
# filter; the closed-form path doesn't need it.
# equinox 0.13.8 ships a broken wheel (references a non-existent
# `equinox.internal._loop` submodule); pin below it until upstream fixes.
prebuilt-bffg = [
    "diffrax>=0.6",
    "equinox<0.13.8",
]
# MCMC prebuilt — jax_tqdm decorates run_chain with per-chain progress bars
# (the import is guarded; mcmc.py runs without it, just without progress).
prebuilt-mcmc = [
    "jax-tqdm>=0.4",
]
# Notebook tutorials in docs/source/notebooks/.
# Install via:   uv sync --group notebooks
notebooks = [
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "diffrax>=0.6",
    "jax-tqdm>=0.4",
    "joblib>=1.4",
    "optax>=0.2",
]
# Sphinx HTML docs (theme + notebook rendering + API autodoc).
# Install via:   uv sync --extra docs
# Build via:     make -C docs html
docs = [
    "sphinx>=7.3",
    "furo>=2024.5",
    "myst-nb>=1.1",
    "sphinx-autodoc-typehints>=2.1",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/computationalevolutionarymorphometry/hyperiax"
Issues = "https://github.com/computationalevolutionarymorphometry/hyperiax/issues"

[build-system]
requires = [
    "setuptools>=68",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hyperiax*"]

[tool.setuptools_scm]
version_file = "hyperiax/_version.py"

# ── uv-specific configuration ─────────────────────────────────────────────
# Dev-only dependencies (PEP 735 dependency groups).
# Install via:   uv sync --group dev
# All extras:    uv sync --all-extras --group dev
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
]

[tool.uv]
# Pin a single resolution across all extras so toggling --extra doesn't churn the lockfile.
required-version = ">=0.4"

# ── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
