[project]
name = "hyperiax"
authors = [
  { name = "Stefan Sommer", email = "sommer@di.ku.dk" },
  { name = "Marcus Holte Teller", email = "marcus@di.ku.dk" },
  { name = "Gefan Yang", email = "gy@di.ku.dk" },
  { name = "Michael Baand Severinsen", email = "michael.baand@sund.ku.dk" },
  { name = "Morten Akhøj Pedersen", email = "morten.akhoej@di.ku.dk" },
  { name = "Nicklas Boserup", email = "nicklas.boserup@sund.ku.dk" },
]
description = "Tree traversals using JAX"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=1.26",
]
dynamic = ["version"]

[project.optional-dependencies]
# Newick I/O via ete3.
io = [
    "ete3>=3.1",
]
# All prebuilt models — diffrax powers the ODE-integrated BFFG backward
# filter; jax-tqdm decorates MCMC run_chain with per-chain progress bars
# (imports are guarded so the core path still runs without them).
# equinox 0.13.8 ships a broken wheel; pin below it until upstream fixes.
# Install via:   uv sync --extra prebuilt
prebuilt = [
    "diffrax>=0.6",
    # The equinox / jaxtyping / wadler-lindig / optimistix family must move
    # together. Current bleeding edges (equinox 0.13.8, jaxtyping 0.3.x,
    # wadler-lindig 0.1.7, optimistix 0.1.0) are mutually incompatible with
    # the diffrax 0.7.x we use. Pin the whole chain at the last known-good
    # set until upstream restabilises.
    "equinox<0.13.8",
    "jaxtyping<0.3",
    "wadler-lindig<0.1.7",
    "optimistix<0.1",
    "jax-tqdm>=0.4",
]
# Notebook tutorials in docs/source/notebooks/.
# Install via:   uv sync --extra notebook
notebook = [
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "joblib>=1.4",
    "optax>=0.2",
]

[project.urls]
Homepage = "https://github.com/computationalevolutionarymorphometry/hyperiax"
Issues = "https://github.com/computationalevolutionarymorphometry/hyperiax/issues"

[build-system]
requires = [
    "setuptools>=68",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hyperiax*"]

[tool.setuptools_scm]
version_file = "hyperiax/_version.py"
# Match v-prefixed tags (e.g. v3.0.0). Used by the PyPI publish workflow.
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:[a-z0-9.+-]*)?)$"
# Reported when scm lookup fails entirely (tarball install w/o .git).
fallback_version = "3.0.0"

# ── uv-specific configuration ─────────────────────────────────────────────
# Dev-only dependencies (PEP 735 dependency groups).
# `dev` bundles test, lint and docs tooling — everything a contributor needs.
# Install via:   uv sync --group dev
# With extras:   uv sync --all-extras --group dev
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "sphinx>=7.3",
    "furo>=2024.5",
    "myst-nb>=1.1",
    "sphinx-autodoc-typehints>=2.1",
    "sphinx-copybutton>=0.5",
]

[tool.uv]
# Pin a single resolution across all extras so toggling --extra doesn't churn the lockfile.
required-version = ">=0.4"

# ── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

# ── ruff ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["hyperiax/_version.py", "docs/build", "docs/source/notebooks"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line length — formatter handles wrapping; long math/string lines are fine
    "E731",  # lambda assignment — common shorthand for state-dependent JAX functions
    "B008",  # function call in default arg — common JAX idiom
    "B905",  # zip without strict — keep as-is for now (jax pytree code passes equal-length iterables)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E402"]  # tests use bugbear-flagged asserts and pytest.importorskip imports
